[package]
name = "pihex"
version = "0.1.6"
authors = ["itchyny <itchyny@cybozu.co.jp>"]
description = "Arbitrary place hexadecimal digits viewer of pi written in Rust"
repository = "https://github.com/itchyny/pihex"
readme = "README.md"
license = "MIT"
keywords = ["pi", "math"]
categories = ["algorithms"]
edition = "2021"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
clap = "4.4.8"
thiserror = "1.0.50"

[[bin]]
name = "pihex"
doc = false
